# doppler-color-shift

./: .gitignore  .travis.yml  Cargo.toml  README.md  colors.py  conversion_matrix.py  convert.py  delta_test.py  index.html  plot.py  test.py  transform.py
data/: RGB_color_matching_functions.txt  XYZ_color_matching_functions.txt
docs/: index.html
docs/pkg/: README.md  doppler_color_shift.d.ts  doppler_color_shift.js  doppler_color_shift_bg.js  doppler_color_shift_bg.wasm  package.json
pkg/: doppler_color_shift.d.ts  doppler_color_shift.js  doppler_color_shift_bg.d.ts  doppler_color_shift_bg.wasm
src/: convert.rs  led.rs  lib.rs  xyz.rs
