[package]
name = "doppler-color-shift"
version = "0.1.0"
authors = ["makskolman <maks@kolman.si>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.23.5"
nalgebra = "0.18"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
]

